# simple-slideshow

./: .gitignore  LICENSE  README.md  pyproject.toml  simple-slideshow.py  tmp
