[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-slideshow"
version = "1.0.0"
description = "A simple slideshow application built with Python."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
classifiers = [
"Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygame",
    "Pillow",
    "python-lsp-server",
]

[project.urls]
"Homepage" = "https://github.com/white-richard/simple-slideshow"

[tool.setuptools.packages.find]
exclude = ["fonts*", "photos*"]